Name:                algo
Version:             0.1
Synopsis:            Simple JSON server for prototyping
Description:         Algonauts unite!
License:             MIT
Author:              Harri Salokorpi
Maintainer:          hsalokor@gmail.com
Stability:           Experimental
Category:            Web
Build-type:          Simple
Cabal-version:       >=1.10

Flag development
  Description: Whether to build the server in development (interpreted) mode
  Default: True

Executable test
  hs-source-dirs: src
  main-is: CmdLine/Main.hs
  default-language: Haskell2010

  extensions:
    OverloadedStrings
    DeriveDataTypeable

  Build-depends:
    base >= 4 && < 5,
    bytestring >= 0.9.1 && < 0.10,
    data-lens >= 2.0.1 && < 2.1,
    data-lens-template >= 2.1 && < 2.2,
    MonadCatchIO-transformers >= 0.2.1 && < 0.3,
    mtl >= 2 && < 3,
    text >= 0.11,
    time >= 1.1 && < 1.4,
    syb >= 0.3.5,
    aeson >= 0.4.0,
    parallel >= 3.1.0.1

  ghc-options: -threaded -Wall -fwarn-tabs -funbox-strict-fields -O2
               -fno-warn-orphans -fno-warn-unused-do-bind -fno-warn-missing-signatures -fno-warn-name-shadowing

Executable server
  hs-source-dirs: src
  main-is: JsonServer/Main.hs
  default-language: Haskell2010

  extensions:
    OverloadedStrings
    DeriveDataTypeable

  Build-depends:
    base >= 4 && < 5,
    bytestring >= 0.9.1 && < 0.10,
    data-lens >= 2.0.1 && < 2.1,
    data-lens-template >= 2.1 && < 2.2,
    MonadCatchIO-transformers >= 0.2.1 && < 0.3,
    mtl >= 2 && < 3,
    snap == 0.7.*,
    snap-core   == 0.7.*,
    snap-server == 0.7.*,
    text >= 0.11,
    time >= 1.1 && < 1.4,
    aeson >= 0.4.0.0,
    syb >= 0.3.5,
    parallel >= 2.2.0.1

  if flag(development)
    cpp-options: -DDEVELOPMENT
    build-depends: hint >= 0.3.2 && < 0.4
    ghc-options: -threaded -w
  else
      ghc-options: -threaded -Wall -fwarn-tabs -funbox-strict-fields -O2
                   -fno-warn-orphans

